* Java version change to Java 16 * Major overhaul from message-based commands to Discord slashcommands * Added various health checks * Auto-leave on empty voice channels implemented * Help module removed; Discord already provides a list of available slash commands in the client. * Simplified Box collection * Reworked SQLite4Java's native library unpacking to pull from maven directly; This requires hardcoding the version number. * Scrapper Docker module; Requires rewrite to use proper API