@@ -13,22 +13,24 @@ import com.sedmelluq.discord.lavaplayer.track.AudioItem;
 import com.sedmelluq.discord.lavaplayer.track.AudioPlaylist;
 import com.sedmelluq.discord.lavaplayer.track.AudioReference;
 import com.sedmelluq.discord.lavaplayer.track.AudioTrack;
-import net.dv8tion.jda.api.Permission;
 import net.dv8tion.jda.api.audio.AudioSendHandler;
 import net.dv8tion.jda.api.entities.GuildVoiceState;
-import net.dv8tion.jda.api.entities.Member;
 import net.dv8tion.jda.api.entities.VoiceChannel;
 import net.dv8tion.jda.api.events.GenericEvent;
-import net.dv8tion.jda.api.events.message.guild.GuildMessageReceivedEvent;
+import net.dv8tion.jda.api.events.guild.voice.GuildVoiceLeaveEvent;
 import net.dv8tion.jda.api.hooks.EventListener;
 import net.dv8tion.jda.api.managers.AudioManager;
 import net.sentientturtle.discordbot.botmodules.simple.Voting;
-import net.sentientturtle.discordbot.components.core.ExclusiveFeatures;
+import net.sentientturtle.discordbot.components.core.Core;
+import net.sentientturtle.discordbot.components.core.FeatureLock;
 import net.sentientturtle.discordbot.components.core.Scheduling;
 import net.sentientturtle.discordbot.components.core.Shutdown;
+import net.sentientturtle.discordbot.components.healthcheck.HealthCheck;
+import net.sentientturtle.discordbot.components.healthcheck.HealthStatus;
 import net.sentientturtle.discordbot.components.module.BotModule;
-import net.sentientturtle.discordbot.components.module.command.annotation.ATextCommand;
-import net.sentientturtle.discordbot.helpers.ErrorHelper;
+import net.sentientturtle.discordbot.components.module.command.Command;
+import net.sentientturtle.discordbot.components.module.command.CommandCall;
+import net.sentientturtle.discordbot.components.permission.BotPermission;
 import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -39,8 +41,6 @@ import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import static net.dv8tion.jda.api.Permission.*;
-
 /**
  * Module for audio playback
  */
@@ -50,15 +50,15 @@ public class Audio extends BotModule implements EventListener {
     private AudioHandler sendHandler = null;
 
     public Audio() {
-        ExclusiveFeatures.lockOrThrow(this.getClass(), ExclusiveFeatures.VOICE);    // TODO: Handle presence via settings
+        FeatureLock.lockOrThrow(this.getClass(), FeatureLock.VOICE);
 
         this.manager = new DefaultAudioPlayerManager();
         manager.registerSourceManager(new YoutubeAudioSourceManager(true));
         manager.registerSourceManager(new HttpAudioSourceManager() {
             @Override
             public AudioItem loadItem(AudioPlayerManager manager, AudioReference reference) {
-                // HttpAudioSourceManager is a bit overeager and will throw exceptions on non-audio http links instead of returning null
-                // and conflict with other source managers (e.g. on youtube video pages)
+                // HttpAudioSourceManager is a bit overeager and will throw exceptions on non-audio http links instead of returning null (null signals the sourcemanager is not suitable for this source)
+                // This causes conflict with other source managers (e.g. on youtube video pages) as the player-manager will stop trying to load if an exception is thrown
                 try {
                     return super.loadItem(manager, reference);
                 } catch (FriendlyException ignored) {
@@ -70,6 +70,20 @@ public class Audio extends BotModule implements EventListener {
         manager.registerSourceManager(new BandcampAudioSourceManager());
         manager.registerSourceManager(new VimeoAudioSourceManager());
 
+        HealthCheck.addInstance(this, () -> {
+            if (this.sendHandler == null) {
+                return HealthStatus.PAUSED;
+            } else {
+                return HealthStatus.RUNNING;
+            }
+        }, () -> {
+            if (this.sendHandler != null) {
+                return Optional.of(this.sendHandler.queueLength() + " tracks queued.");
+            } else {
+                return Optional.empty();
+            }
+        });
+
         Shutdown.registerHook(manager::shutdown);
     }
 
@@ -80,17 +94,15 @@ public class Audio extends BotModule implements EventListener {
         return this.sendHandler;
     }
 
-    private boolean joinVoiceChannel(GuildMessageReceivedEvent event) {
-        final AudioManager audioManager = event.getGuild().getAudioManager();
+    private boolean joinVoiceChannel(CommandCall commandCall) {
+        final AudioManager audioManager = commandCall.getGuild().getAudioManager();
 
         if (audioManager.getSendingHandler() == null || audioManager.getSendingHandler() != this.sendHandler) {
             audioManager.setSendingHandler(prepareSendHandler());
         }
 
         if (!audioManager.isConnected()) {
-            Member member = event.getMember();
-            if (member == null) return false;
-            GuildVoiceState voiceState = member.getVoiceState();
+            GuildVoiceState voiceState = commandCall.getMember().getVoiceState();
             if (voiceState == null) return false;
             VoiceChannel voiceChannel = voiceState.getChannel();
             if (voiceChannel == null) return false;
@@ -99,35 +111,31 @@ public class Audio extends BotModule implements EventListener {
         return true;
     }
 
-    @ATextCommand(helpText = "Summons this bot to the user's current voice channel", discordPermissions = {MESSAGE_WRITE, VOICE_CONNECT, VOICE_SPEAK})
-    public void summon(String args, GuildMessageReceivedEvent event, EnumSet<Permission> selfPermissions) {
-        var caller = event.getMember();
-        if (caller != null) {
-            final VoiceChannel voiceChannel = Objects.requireNonNull(caller.getVoiceState()).getChannel();
-            if (voiceChannel != null) {
-                final AudioManager audioManager = event.getGuild().getAudioManager();
+    @Command(commandName = "audio", subcommandName = "summon", description = "Summons the bot to your voice channel")
+    public void summon(CommandCall commandCall) {
+        var caller = commandCall.getMember();
+        final VoiceChannel voiceChannel = Objects.requireNonNull(caller.getVoiceState()).getChannel();
+        if (voiceChannel != null) {
+            final AudioManager audioManager = commandCall.getGuild().getAudioManager();
 
-                // Reset sendHandler if needed regardless of current connection status
-                if (audioManager.getSendingHandler() == null || audioManager.getSendingHandler() != this.sendHandler) {
-                    audioManager.setSendingHandler(prepareSendHandler());
-                }
+            // Reset sendHandler if needed regardless of current connection status
+            if (audioManager.getSendingHandler() == null || audioManager.getSendingHandler() != this.sendHandler) {
+                audioManager.setSendingHandler(prepareSendHandler());
+            }
 
-                if (voiceChannel.equals(audioManager.getConnectedChannel())) {
-                    ErrorHelper.reportFromGuildEvent(event, selfPermissions, "⚠", "I'm already in your voice channel");
-                } else {
-                    audioManager.openAudioConnection(voiceChannel);
-                }
+            if (voiceChannel.equals(audioManager.getConnectedChannel())) {
+                commandCall.error("⚠ I'm already in your voice channel");
             } else {
-                ErrorHelper.reportFromGuildEvent(event, selfPermissions, "⚠", "You are not in a voice channel");
+                audioManager.openAudioConnection(voiceChannel);
             }
         } else {
-            ErrorHelper.reportFromGuildEvent(event, selfPermissions, "⚠", "You are not in a voice channel");
+            commandCall.error("⚠ You are not in a voice channel");
         }
     }
 
-    @ATextCommand(helpText = "Dismisses this bot from voice channels", discordPermissions = {VOICE_CONNECT, VOICE_SPEAK})
-    public void dismiss(String args, GuildMessageReceivedEvent event, EnumSet<Permission> selfPermissions) {
-        final AudioManager audioManager = event.getGuild().getAudioManager();
+    @Command(commandName = "audio", subcommandName = "dismiss", description = "Dismisses the bot from voice channels")
+    public void dismiss(CommandCall commandCall) {
+        final AudioManager audioManager = commandCall.getGuild().getAudioManager();
         audioManager.closeAudioConnection();
         audioManager.setSendingHandler(null);
         if (this.sendHandler != null) {
@@ -136,14 +144,17 @@ public class Audio extends BotModule implements EventListener {
         }
     }
 
-    @ATextCommand(syntax = "play <track>", helpText = "Plays the specified song over voice", discordPermissions = {MESSAGE_WRITE, VOICE_CONNECT, VOICE_SPEAK})
-    public void play(String args, GuildMessageReceivedEvent event, EnumSet<Permission> selfPermissions) {
-        if (args.length() > 0) {
-            if (joinVoiceChannel(event) && this.sendHandler != null) {
-                event.getChannel()
+    @Command(commandName = "audio", subcommandName = "play", description = "plays an audio track")
+    public void play(
+            CommandCall commandCall,
+            @Command.Parameter(name = "track", description = "Track or playlist to play", optional = true) String tracks
+    ) {
+        if (tracks != null && tracks.length() > 0) {
+            if (joinVoiceChannel(commandCall) && this.sendHandler != null) {
+                commandCall.getChannel()
                         .sendMessage("🔄 Loading track(s)...")
                         .queue(message -> {
-                            this.manager.loadItem(args, new AudioLoadResultHandler() {
+                            this.manager.loadItem(tracks, new AudioLoadResultHandler() {
                                 @Override
                                 public void trackLoaded(AudioTrack track) {
                                     sendHandler.queueTrack(track);
@@ -169,24 +180,28 @@ public class Audio extends BotModule implements EventListener {
                             });
                         });
             } else {
-                ErrorHelper.reportFromGuildEvent(event, selfPermissions, "⚠", "Bot is not in a voice channel");
+                commandCall.error("⚠ Bot cannot join voice channel");
             }
         } else if (this.sendHandler != null && this.sendHandler.player.isPaused()) {
             this.sendHandler.player.setPaused(false);
         } else {
-            ErrorHelper.reportFromGuildEvent(event, selfPermissions, "⚠", "You must specify a track to play");
+            commandCall.error("⚠ You must specify a track to play if the queue is empty");
         }
     }
 
-    @ATextCommand(syntax = "play vote <track 1, track 2, ...>", helpText = "Hold a vote for which track to play", discordPermissions = {MESSAGE_WRITE, VOICE_CONNECT, VOICE_SPEAK})
-    public void play_vote(String args, GuildMessageReceivedEvent event, EnumSet<Permission> selfPermissions) {
-        List<String> options = Arrays.stream(args.split(","))
-                                       .map(String::trim)
-                                       .filter(s -> !s.isBlank())
-                                       .collect(Collectors.toList());
+    @Command(commandName = "audio", subcommandName = "vote", description = "Starts a vote for which audio track to play")
+    public void play_vote(
+            CommandCall commandCall,
+            @Command.Parameter(name = "tracks", description = "Tracks to vote between, separated by comma") String trackString
+    ) {
+        List<String> options = Arrays.stream(trackString.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isBlank())
+                .toList();
 
-        if (options.size() >= 2) {
-            if (joinVoiceChannel(event) && this.sendHandler != null) {
+        if (options.size() >= 2 && options.size() <= 25) {
+            if (joinVoiceChannel(commandCall) && this.sendHandler != null) {
+                commandCall.reply("Holding vote...", true);
                 List<AudioItem> tracks = new ArrayList<>();
                 var futures = options.stream().map(option -> this.manager.loadItem(option, new AudioLoadResultHandler() {
                     @Override
@@ -232,7 +247,7 @@ public class Audio extends BotModule implements EventListener {
                         }, Function.identity()));
                         Voting.runVote(
                                 "Vote on the next audio to play...",
-                                event.getChannel(),
+                                commandCall.getChannel(),
                                 new ArrayList<>(trackMap.keySet()),
                                 winner -> {
                                     var audioItem = trackMap.get(winner);
@@ -245,79 +260,89 @@ public class Audio extends BotModule implements EventListener {
                                     }
                                 },
                                 1,
-                                TimeUnit.MINUTES
+                                TimeUnit.MINUTES,
+                                BotPermission.EVERYONE()    // TODO: Make configurable
                         );
                     } else if (tracks.size() == 1) {
                         var track = tracks.get(0);
                         if (track instanceof AudioTrack) {
-                            event.getChannel().sendMessage("Only one track loaded successfully, now playing: " + ((AudioTrack) track).getInfo().title).queue();
+                            commandCall.getChannel().sendMessage("Only one track loaded successfully, now playing: " + ((AudioTrack) track).getInfo().title).queue();
                             sendHandler.queueTrack((AudioTrack) track);
                         } else if (track instanceof AudioPlaylist) {
-                            event.getChannel().sendMessage("Only one item successfully, now playing: " + ((AudioPlaylist) track).getName()).queue();
+                            commandCall.getChannel().sendMessage("Only one item loaded successfully, now playing: " + ((AudioPlaylist) track).getName()).queue();
                             sendHandler.queuePlaylist((AudioPlaylist) track);
                         }
                     } else {
-                        event.getChannel().sendMessage("No audio tracks loaded successfully, vote skipped.").queue();
+                        commandCall.getChannel().sendMessage("No audio tracks loaded successfully, vote skipped.").queue();
                     }
                 });
             } else {
-                ErrorHelper.reportFromGuildEvent(event, selfPermissions, "⚠", "Bot is not in a voice channel");
+                commandCall.error("⚠ Bot cannot join voice channel");
             }
         } else {
-            ErrorHelper.reportFromGuildEvent(event, selfPermissions, "⚠", "You must specify at least two options");
+            commandCall.error("⚠ You must specify at least 2 and at most 25 options");
         }
     }
 
-    @ATextCommand(helpText = "pauses audio playback", discordPermissions = {MESSAGE_WRITE})
-    public void pause(String args, GuildMessageReceivedEvent event, EnumSet<Permission> selfPermissions) {
+    @Command(commandName = "audio", subcommandName = "pause", description = "Pauses audio playback")
+    public void pause(CommandCall commandCall) {
         if (this.sendHandler != null) {
             this.sendHandler.player.setPaused(true);
         } else {
-            ErrorHelper.reportFromGuildEvent(event, selfPermissions, "⚠", "Bot is not currently playing anything");
+            commandCall.error("⚠ Bot is not currently playing anything");
         }
     }
 
-    @ATextCommand(helpText = "skips the currently playing song", discordPermissions = {MESSAGE_WRITE})
-    public void skip(String args, GuildMessageReceivedEvent event, EnumSet<Permission> selfPermissions) {
+    @Command(commandName = "audio", subcommandName = "skip", description = "Skips the currently playing track")
+    public void skip(CommandCall commandCall) {
         if (this.sendHandler != null) {
             this.sendHandler.skip();
         } else {
-            ErrorHelper.reportFromGuildEvent(event, selfPermissions, "⚠", "Bot is not currently playing anything");
+            commandCall.error("⚠ Bot is not currently playing anything");
         }
     }
 
-    @ATextCommand(helpText = "shuffles the current playlist", discordPermissions = {MESSAGE_WRITE})
-    public void shuffle(String args, GuildMessageReceivedEvent event, EnumSet<Permission> selfPermissions) {
+    @Command(commandName = "audio", subcommandName = "shuffle", description = "Shuffles the current playlist once; New tracks will be added to the end of the playlist")
+    public void shuffle(CommandCall commandCall) {
         if (this.sendHandler != null) {
             this.sendHandler.shuffle();
         } else {
-            ErrorHelper.reportFromGuildEvent(event, selfPermissions, "⚠", "Bot is not currently playing anything");
+            commandCall.error("⚠ Bot is not currently playing anything");
         }
     }
 
-    @ATextCommand(syntax = "repeat [on|off|toggle]", helpText = "Turns on, off, or toggles repeat mode", discordPermissions = {MESSAGE_WRITE})
-    public void repeat(String args, GuildMessageReceivedEvent event, EnumSet<Permission> selfPermissions) {
+    @Command(commandName = "audio", subcommandName = "repeat", description = "Changes repeat mode")
+    public void repeat(CommandCall commandCall, @Command.Parameter(name = "mode", description = "Repeat mode", optional = true) @Command.Choices({"on", "off"}) String mode) {
         if (this.sendHandler != null) {
-            Boolean isRepeating = switch (args.toLowerCase()) {
+            Boolean isRepeating = switch (mode) {
                 case "on" -> this.sendHandler.setRepeat(true);
                 case "off" -> this.sendHandler.setRepeat(false);
-                case "toggle" -> this.sendHandler.toggleRepeat();
-                default -> null;
+                default -> this.sendHandler.toggleRepeat();
             };
-            if (isRepeating == null) {
-                ErrorHelper.reportFromGuildEvent(event, selfPermissions, "⚠", "Invalid command syntax");
-            } else if (isRepeating) {
-                event.getChannel().sendMessage("Repeat now **ON**").queue();
+            if (isRepeating) {
+                commandCall.reply("Repeat now **ON**");
             } else {
-                event.getChannel().sendMessage("Repeat now **OFF**").queue();
+                commandCall.reply("Repeat now **OFF**");
             }
         } else {
-            ErrorHelper.reportFromGuildEvent(event, selfPermissions, "⚠", "Bot is not currently playing anything");
+            commandCall.error("⚠ Bot is not currently playing anything");
         }
     }
 
     @Override
     public void onEvent(@NotNull GenericEvent event) {
-        // TODO: Auto-leave voice channel if last (other) user leaves
+        if (this.sendHandler != null && event instanceof GuildVoiceLeaveEvent guildVoiceLeaveEvent) {
+            var members = guildVoiceLeaveEvent.getOldValue().getMembers();
+            assert Core.getJDA() != null;   // We wouldn't be receiving events if Core's JDA is unset
+            if (members.size() == 1 && members.get(0).getUser() == Core.getJDA().getSelfUser()) {   // If bot is the only user in the voice channel
+                final AudioManager audioManager = guildVoiceLeaveEvent.getGuild().getAudioManager();
+                audioManager.closeAudioConnection();
+                audioManager.setSendingHandler(null);
+                if (this.sendHandler != null) {
+                    this.sendHandler.destroy();
+                    this.sendHandler = null;
+                }
+            }
+        }
     }
 }
